# revizor

./: .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: test-and-lint.yml
revizor/: tagger.py  tokenizer.py  types.py  utils.py
tests/: conftest.py  test_predict.py
